# nba-value

./: .env.example  .gitignore  CLAUDE.md  NBA_Value_Betting_Platform_Build_Plan.docx  README.md  docker-compose.dev.yml  docker-compose.yml  railway.toml
backend/: .env.example  Dockerfile  Procfile  TOTALS_MODEL_V3.md  TOTALS_V3_SUMMARY.md  nixpacks.toml  pyproject.toml  railway.json  railway.toml  requirements.txt  test_apis.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_team_stats_records.py  003_add_ats_ou_tracking.py  004_mlb_tables.py
backend/docs/: MODEL_CHANGES_2026-01-13.md
backend/models/: calibration.pkl  mlb_run_diff_v1.joblib  mlb_totals_v1.joblib  mlb_totals_v2.joblib  mlb_training_data.parquet  mov_model.pkl  nfl_mov_v1.joblib  nfl_totals_v1.joblib  spread_model_v2.pkl  totals_model.pkl  totals_model_v3.pkl  training_data.csv
backend/scripts/: backfill_mlb_betting_records.py  mlb_retune_tracker.py  preview_card.py  runline_revalidation.py
backend/scripts/migrations/: 2026-07-18_add_sms_alert_sent.sql  2026-07-19_add_best_total_is_value.sql
backend/src/: __init__.py  celery_app.py  config.py  database.py  main.py
backend/src/api/: admin.py  backtest.py  bets.py  evaluation.py  health.py  markets.py  mlb.py  nfl.py  trends.py
backend/src/models/: __init__.py  evaluation.py  game.py  game_result.py  market.py  mlb_game.py  mlb_game_context.py  mlb_market.py  mlb_pitcher.py  mlb_pitcher_stats.py  mlb_prediction.py  mlb_prediction_snapshot.py  mlb_team.py  mlb_team_stats.py  nfl_game.py  nfl_game_context.py  (+13 more)
(+227 files in other folders)
